# qte-attestation

./: .pre-commit-config.yaml  NEXT_STEPS.md  README.md  backend_selector.py  pyproject.toml
attestations/: u31_t1_prod3_aer_u58_card.json  u31_t1_prod3_ibm_torino_u58_card.json  u31_t2_wrong_key_aer_u58_card.json  u31_t2_wrong_key_ibm_torino_u58_card.json
data/: r_t1_demo_bits_n16_N10000.txt
docs/: MAIN.md  MAIN2.md  U58_attestation.md  e0_nvade_key_channel.tex  e1_encryption_game.tex  e1_information_limit_multikey.tex  nvade_encryption_minipaper.tex  nvadesecphaseencryption.tex  r1_randomness_cert.tex  u31_log.txt  u31_trapdoor_witness.tex  u58_attestation_card.tex  unit_r_randomness_certificate.tex
runner/: attest_from_counts.py  circuits.py  config.toml  e1_t1_encryption_baseline.py  e1_t2_nvade_phase_encryption.py  e2_t1_multishare_xor_baseline.py  e2_t2_nvade_multishare_phase.py  harvest_and_verify.py  provenance.py  r_t1_randomness_certificate.py  submit.py  u01_roundtrip.py  u31_t1_trapdoor_witness.py  u31_t2_wrong_key_llr.py  u31_u58_cp_intervals.py  u31_u58_full_roc_cp.py  u31_u58_regression.py  u56_auc_gap_from_u58.py  u56_u58_null_baseline.py
runs/: 2025-11-11T06-39-56Z_runlog.json  2025-11-11T06-39-56Z_submit_counts.jsonl  2025-11-11T06-41-38Z_runlog.json  2025-11-11T06-41-38Z_submit_counts.jsonl  2025-11-11T06-42-16Z_runlog.json  2025-11-11T06-42-16Z_submit_counts.jsonl  2025-11-11T06-47-46Z_runlog.json  2025-11-11T06-47-46Z_submit_counts.jsonl  2025-11-11T06-51-13Z_runlog.json  2025-11-11T06-51-13Z_submit_counts.jsonl  2025-11-11T06-56-55Z_runlog.json  (+35 more)
(+20 files in other folders)
