[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qte-attestation"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2",
  "pyyaml",
  "rich"
]

[project.optional-dependencies]
dev = ["pytest","mypy","ruff","pre-commit"]

[project.scripts]
qte-attestation = "qte_attestation.verifier.cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
strict = true
